<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Stylist</string>
    <string name="title_activity_enter_article">New Article of Clothing</string>
    <string name="title_activity_view_outfits">Outfits for Today</string>
    <string name="title_activity_choose_outfit">Your Preferences</string>


    <string name="wardrobe">Welcome to Your Wardrobe</string>
    <string name="action_enter_item">Enter a new article of clothing.</string>
    <string name="action_choose_outfit">Choose an outfit for today</string>


    <string name="enter_article">Enter an Article of Clothing</string>
    <string name="clothing_type">Clothing Type</string>
    <string name="clothing_color">Clothing Color</string>
    <string name="clothing_formality">Clothing Formality</string>
    <string name="clothing_temperature">Clothing Temperature</string>
    <string name="enter_clothing_name">Enter this clothing article\'s name</string>
    <string name="enter_item">Enter this article of clothing</string>
    <string name="selected_type">No Type Selected</string>
    <string name="selected_color">No Color Selected</string>
    <string name="selected_formality">No Formality Selected</string>
    <string name="selected_temperature">No Temperature Selected</string>


    <string name="temperature_preference">Temperature Preference</string>
    <string name="formality_preference">Formality Preference</string>
    <string name="enter_preferences">Enter Preferences</string>


    <string name="available_clothing">Your Outfits</string>
    <string name="return_to_wardrobe">Return to Your Wardrobe</string>
    <string name="judge">Judge this Outfit</string>
    <string name="suggested_outfit">Suggested Outfit</string>



    <string name="short_sleeve_shirt">Short-sleeve shirt</string>
    <string name="long_sleeve_shirt">Long-sleeve shirt</string>
    <string name="sleeveless_shirt">Sleeveless shirt</string>
    <string name="pants">Pants</string>
    <string name="shorts">Shorts</string>
    <string name="skirt">Skirt</string>
    <string name="dress_shoes">Dress shoes</string>
    <string name="tennis_shoes">Tennis shoes</string>
    <string name="sandals">Sandals</string>

    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="pink">Pink</string>
    <string name="brown">Brown</string>

    <string name="casual">Casual</string>
    <string name="formal">Formal</string>
    <string name="recreational">Recreational</string>

    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="mild">Mild</string>


</resources>
